[package]
name = "vintt3"
version = "0.1.0"
edition = "2021"
rust-version = "1.60.0"

[lib]
name="vintt3"
path="lib/lib.rs"

[[bin]]
name="vintt3"
path="src/vintt3.rs"

[dependencies]
tokio = {version="1.16.1",features=["full"]}
sysinfo = "0.23.2"
serde = {version="1.0.136",features=["derive"]}
serde_yaml = "0.8.23"
thiserror = "1.0.30"
warp = "0.3.2"
pretty_env_logger = "0.4.0"
log = "0.4.14"